# midi-controller

./: .gitignore  .gitmodules  README.md  build-fader-wing.sh  build.py  build.sh
.github/workflows/: c-cpp.yml  cmake-fader-wing.yml  cmake-firmware.yml  cmake-single-platform.yml  render-drawio.yml
Code/: CMakeLists.txt
Code/lib/: CMakeLists.txt
Code/src/: CMakeLists.txt
Code/src/fader-wing/: CMakeLists.txt  main.cpp
Code/src/firmware/: CMakeLists.txt  main.cpp
Code/src/firmware/button/: CMakeLists.txt  button.cpp  button.h
Code/src/firmware/fader/: CMakeLists.txt  fader.cpp  fader.h
Code/src/firmware/mcp23s17/: CMakeLists.txt  mcp23s17.cpp  mcp23s17.h  pin.cpp  pin.h
Code/src/firmware/mcp3008/: CMakeLists.txt  mcp3008.cpp  mcp3008.h
Code/src/firmware/pin/: CMakeLists.txt  pin.cpp  pin.h
Code/src/lib/pin/: CMakeLists.txt  adcPin.cpp  adcPin.h  gpioPin.cpp  gpioPin.h  pin.cpp  pin.h  pwmPin.cpp  pwmPin.h
docs/: faceplate.7z  fader pid control.md  layout.drawio  midi-test.20240517-064907.FCBak  midi-test.FCStd  model.20240518-000417.FCBak  model.FCStd  model.sync-conflict-20240508-114516-TOB3DYY.FCStd  signal flow.drawio  sync.ffs_db
kicad/: Fader-Leds.kicad_sch  MIDI.kicad_pcb  MIDI.kicad_prl  MIDI.kicad_pro  MIDI.kicad_sch  USB.kicad_sch  faders.kicad_prl  faders.kicad_pro  faders.kicad_sch  fp-info-cache  fp-info-cache.sync-conflict-20240630-202218-TOB3DYY  keypad.kicad_pcb  keypad.kicad_prl  keypad.kicad_pro  keypad.kicad_sch  midi-controller.kicad_pcb  midi-controller.kicad_prl  midi-controller.kicad_pro  midi-controller.kicad_sch  place_footprints.ini  ~_autosave-keypad.kicad_pcb.lck  ~faders.kicad_pcb.lck
model/: fader test stand.20240903-205325.FCBak  keycap insert v1-Body.3mf  keycap insert v1.20240827-174032.FCBak  keycap insert v1.20240827-174534.FCBak  keycap insert v1.20240925-201902.FCBak  keycap insert v1.20240925-203815.FCBak  keycap insert v1.20240925-203816.FCBak  keycap insert v1.FCStd  keycap insert v1.stl  layout.drawio  midi-test-Body.step  model-faceplate.dxf  model-faceplate.step  model-old.FCStd  model.20240627-155008.FCBak  model.FCStd  model.sync-conflict-20240517-162659-TOB3DYY.FCStd
model/fader/: fader test stand-Body.stl  fader test stand.FCStd
model/keycaps/: keycap 1.stl  keycap 1u +.FCStd  keycap 1u -.FCStd  keycap 1u 0.FCStd  keycap 1u 1.FCStd  keycap 1u 10.FCStd  keycap 1u 11.FCStd  keycap 1u 12.FCStd  keycap 1u 13.FCStd  keycap 1u 14.FCStd  keycap 1u 15.FCStd  keycap 1u 16.FCStd  keycap 1u 17.FCStd  keycap 1u 18.FCStd  keycap 1u 19.FCStd  keycap 1u 2.FCStd  keycap 1u 20.FCStd  keycap 1u 21.FCStd  keycap 1u 22.FCStd  keycap 1u 23.FCStd  keycap 1u 24.FCStd  keycap 1u 25.FCStd  keycap 1u 26.FCStd  keycap 1u 27.FCStd  keycap 1u 28.FCStd  keycap 1u 29.FCStd  keycap 1u 3.FCStd  keycap 1u 30.FCStd  keycap 1u 4.FCStd  keycap 1u 5.FCStd  keycap 1u 6.FCStd  keycap 1u 7.FCStd  keycap 1u 8.FCStd  keycap 1u 9.FCStd  keycap 1u B1.FCStd  keycap 1u B2.FCStd  (+48 more)
tools/: build-fader-wing.sh  build-firmware.sh
(+14 files in other folders)
